--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,7 +1,7 @@
 @import url(main.css);
 
 .header__class {
-  height: 60vh;
+  height: 75vh;
   background-image: url(../images/hero.jpg);
   background-position: center;
   background-repeat: no-repeat;
@@ -33,11 +33,8 @@ a {
 /*hero da página*/
 
 .header-content {
-  align-items: center;
-  padding: 10%;
-  display: grid;
-  grid-template-columns: 44% 55%;
-  gap: 1%;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .header__text {
@@ -56,7 +53,7 @@ a {
 }
 
 .header__img img {
-  width: 100%;
+  width: 80%;
   max-width: 400px;
   height: auto;
   display: block;
